--- a/app-swoosh/app-swoosh/Base.lproj/Main.storyboard
+++ b/app-swoosh/app-swoosh/Base.lproj/Main.storyboard
@@ -57,6 +57,9 @@
                                 <state key="normal" title="GET STARTED">
                                     <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <segue destination="k57-G2-0dY" kind="show" id="a4e-sN-Jao"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ON GOINT ALL OUT" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AKC-L7-aQA">
                                 <rect key="frame" x="57.5" y="216" width="260" height="33"/>
@@ -175,11 +178,24 @@
                                     <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="py5-Om-Hew">
+                                <rect key="frame" x="16" y="20" width="42" height="25"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="42" id="V9o-AO-fKl"/>
+                                    <constraint firstAttribute="height" constant="25" id="gIh-Ws-aiB"/>
+                                </constraints>
+                                <state key="normal" image="backButton"/>
+                                <connections>
+                                    <segue destination="NC9-LZ-3Bh" kind="unwind" unwindAction="unwindFromSkillVCWithUnwindSegue:" id="Iyk-F8-dkq"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="rWI-cp-JZw" firstAttribute="trailing" secondItem="czO-PZ-Jc4" secondAttribute="trailing" constant="16" id="BPa-Ap-7v7"/>
                             <constraint firstItem="eei-DN-ec1" firstAttribute="trailing" secondItem="rWI-cp-JZw" secondAttribute="trailing" id="FGL-Cp-8sq"/>
+                            <constraint firstItem="py5-Om-Hew" firstAttribute="leading" secondItem="rWI-cp-JZw" secondAttribute="leading" constant="16" id="Qve-jc-CzG"/>
+                            <constraint firstItem="py5-Om-Hew" firstAttribute="top" secondItem="rWI-cp-JZw" secondAttribute="top" id="Sjs-w0-WwO"/>
                             <constraint firstItem="vVc-1j-cd3" firstAttribute="leading" secondItem="rWI-cp-JZw" secondAttribute="leading" constant="16" id="TF1-Yt-4Iq"/>
                             <constraint firstItem="eei-DN-ec1" firstAttribute="top" secondItem="7Q3-b1-GGw" secondAttribute="top" id="XFF-Go-tIM"/>
                             <constraint firstItem="czO-PZ-Jc4" firstAttribute="top" secondItem="rWI-cp-JZw" secondAttribute="top" constant="20" id="Y3w-mM-mHJ"/>
@@ -196,6 +212,7 @@
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4AQ-qY-5Uc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="NC9-LZ-3Bh" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="671.20000000000005" y="135.38230884557723"/>
         </scene>
@@ -286,10 +303,11 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OJa-dW-zyO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1522.4000000000001" y="137.18140929535232"/>
+            <point key="canvasLocation" x="1412" y="135"/>
         </scene>
     </scenes>
     <resources>
+        <image name="backButton" width="29" height="24"/>
         <image name="beginnerBallerBG" width="414" height="736"/>
         <image name="desiredLeagueBG" width="414" height="736"/>
         <image name="swooshLogo" width="119" height="20"/>
